# ynab-import

./: Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml  rust.yml
src/: cli.rs  csv.rs  date.rs  flow.rs  lib.rs  main.rs  memo.rs  messages.rs  parser.rs  payee.rs
tests/: cli.rs
